build/log/idf_py_stdout_output_436270
[1/10] Performing build step for 'bootloader'
[1/1] cd /root/esp/tfpro/hello_world/build/bootloader/esp-idf/esptool_py && /root/esp/idf-tools/python_env/idf5.3_py3.10_env/bin/python /root/esp/idf/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /root/esp/tfpro/hello_world/build/bootloader/bootloader.bin
Bootloader binary size 0x6f50 bytes. 0xb0 bytes (1%) free.
[2/8] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/model_int8.cc.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/model_int8.cc.obj 
/root/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/bin/xtensa-esp32-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.3-dev-2815-gbe06a6f5ff\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/root/esp/tfpro/hello_world/build/config -I/root/esp/idf/esp-idf/components/newlib/platform_include -I/root/esp/idf/esp-idf/components/freertos/config/include -I/root/esp/idf/esp-idf/components/freertos/config/include/freertos -I/root/esp/idf/esp-idf/components/freertos/config/xtensa/include -I/root/esp/idf/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/root/esp/idf/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/root/esp/idf/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/root/esp/idf/esp-idf/components/freertos/esp_additions/include -I/root/esp/idf/esp-idf/components/esp_hw_support/include -I/root/esp/idf/esp-idf/components/esp_hw_support/include/soc -I/root/esp/idf/esp-idf/components/esp_hw_support/include/soc/esp32 -I/root/esp/idf/esp-idf/components/esp_hw_support/dma/include -I/root/esp/idf/esp-idf/components/esp_hw_support/port/esp32/. -I/root/esp/idf/esp-idf/components/esp_hw_support/port/esp32/include -I/root/esp/idf/esp-idf/components/heap/include -I/root/esp/idf/esp-idf/components/log/include -I/root/esp/idf/esp-idf/components/soc/include -I/root/esp/idf/esp-idf/components/soc/esp32 -I/root/esp/idf/esp-idf/components/soc/esp32/include -I/root/esp/idf/esp-idf/components/hal/platform_port/include -I/root/esp/idf/esp-idf/components/hal/esp32/include -I/root/esp/idf/esp-idf/components/hal/include -I/root/esp/idf/esp-idf/components/esp_rom/include -I/root/esp/idf/esp-idf/components/esp_rom/include/esp32 -I/root/esp/idf/esp-idf/components/esp_rom/esp32 -I/root/esp/idf/esp-idf/components/esp_common/include -I/root/esp/idf/esp-idf/components/esp_system/include -I/root/esp/idf/esp-idf/components/esp_system/port/soc -I/root/esp/idf/esp-idf/components/esp_system/port/include/private -I/root/esp/idf/esp-idf/components/xtensa/esp32/include -I/root/esp/idf/esp-idf/components/xtensa/include -I/root/esp/idf/esp-idf/components/xtensa/deprecated_include -I/root/esp/idf/esp-idf/components/lwip/include -I/root/esp/idf/esp-idf/components/lwip/include/apps -I/root/esp/idf/esp-idf/components/lwip/include/apps/sntp -I/root/esp/idf/esp-idf/components/lwip/lwip/src/include -I/root/esp/idf/esp-idf/components/lwip/port/include -I/root/esp/idf/esp-idf/components/lwip/port/freertos/include -I/root/esp/idf/esp-idf/components/lwip/port/esp32xx/include -I/root/esp/idf/esp-idf/components/lwip/port/esp32xx/include/arch -I/root/esp/idf/esp-idf/components/lwip/port/esp32xx/include/sys -I/root/esp/idf/esp-idf/components/spi_flash/include -I/root/esp/tfpro/hello_world/managed_components/espressif__esp-tflite-micro -I/root/esp/tfpro/hello_world/managed_components/espressif__esp-tflite-micro/third_party/gemmlowp -I/root/esp/tfpro/hello_world/managed_components/espressif__esp-tflite-micro/third_party/flatbuffers/include -I/root/esp/tfpro/hello_world/managed_components/espressif__esp-tflite-micro/third_party/ruy -I/root/esp/tfpro/hello_world/managed_components/espressif__esp-tflite-micro/third_party/kissfft -I/root/esp/tfpro/hello_world/managed_components/espressif__esp-tflite-micro/signal/micro/kernels -I/root/esp/tfpro/hello_world/managed_components/espressif__esp-tflite-micro/signal/src -I/root/esp/tfpro/hello_world/managed_components/espressif__esp-tflite-micro/signal/src/kiss_fft_wrappers -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -O2 -fmacro-prefix-map=/root/esp/tfpro/hello_world=. -fmacro-prefix-map=/root/esp/idf/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -DTF_LITE_STATIC_MEMORY -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/model_int8.cc.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/model_int8.cc.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/model_int8.cc.obj -c /root/esp/tfpro/hello_world/main/model_int8.cc
/root/esp/tfpro/hello_world/main/model_int8.cc:40654:11: error: conflicting declaration 'const int fruits_len'
40654 | const int fruits_len = 487760;
      |           ^~~~~~~~~~
In file included from /root/esp/tfpro/hello_world/main/model_int8.cc:3:
/root/esp/tfpro/hello_world/main/model_int8.h:5:27: note: previous declaration as 'const unsigned int fruits_len'
    5 | extern const unsigned int fruits_len;
      |                           ^~~~~~~~~~
[3/8] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main_functions.cc.obj
In file included from /root/esp/tfpro/hello_world/managed_components/espressif__esp-tflite-micro/tensorflow/lite/micro/micro_mutable_op_resolver.h:22,
                 from /root/esp/tfpro/hello_world/main/main_functions.cc:17:
/root/esp/tfpro/hello_world/managed_components/espressif__esp-tflite-micro/tensorflow/lite/core/api/flatbuffer_conversions.h: In member function 'T* tflite::BuiltinDataAllocator::AllocatePOD()':
/root/esp/tfpro/hello_world/managed_components/espressif__esp-tflite-micro/tensorflow/lite/core/api/flatbuffer_conversions.h:46:24: warning: 'template<class _Tp> struct std::is_pod' is deprecated: use 'is_standard_layout && is_trivial' instead [-Wdeprecated-declarations]
   46 |     static_assert(std::is_pod<T>::value, "Builtin data structure must be POD.");
      |                        ^~~~~~
In file included from /root/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/bits/stl_pair.h:60,
                 from /root/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/utility:69,
                 from /root/esp/tfpro/hello_world/managed_components/espressif__esp-tflite-micro/tensorflow/lite/core/c/common.h:1463,
                 from /root/esp/tfpro/hello_world/managed_components/espressif__esp-tflite-micro/tensorflow/lite/c/common.h:31,
                 from /root/esp/tfpro/hello_world/managed_components/espressif__esp-tflite-micro/tensorflow/lite/micro/micro_mutable_op_resolver.h:21:
/root/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/type_traits:819:5: note: declared here
  819 |     is_pod
      |     ^~~~~~
ninja: build stopped: subcommand failed.
